--- a/server/package.json
+++ b/server/package.json
@@ -11,11 +11,10 @@
     "ejs": "^3.0.1",
     "express": "^4.17.1",
     "express-prettify": "^0.1.1",
-    "instagram-web-api": "^2.1.0",
     "moment": "^2.24.0",
     "mongodb": "^3.4.1",
     "mongoose": "^5.8.7",
-    "nodemon": "^2.0.2",
+    "nodemon": "^2.0.2"
   },
   "devDependencies": {
     "expect": "^25.0.0"
