--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "nativescript": {
-    "id": "org.nativescript.quizzTemplate",
+    "id": "org.eedama.quizzForKids",
     "tns-android": {
-      "version": "5.3.1"
+      "version": "6.0.0"
     },
     "tns-ios": {
-      "version": "5.3.1"
+      "version": "6.0.1"
     }
   },
   "description": "NativeScript Application",
@@ -13,8 +13,8 @@
   "repository": "<fill-your-repository-here>",
   "dependencies": {
     "nativescript-theme-core": "~1.0.4",
-    "nativescript-vue": "~2.2.0",
-    "tns-core-modules": "~5.3.0",
+    "nativescript-vue": "2.3.0",
+    "tns-core-modules": "6.0.1",
     "@vue/devtools": "^5.0.6",
     "axios": "^0.18.0",
     "he": "^1.2.0",
@@ -28,10 +28,6 @@
     "@babel/core": "~7.1.0",
     "@babel/preset-env": "~7.1.0",
     "babel-loader": "~8.0.0",
-    "nativescript-dev-webpack": "~0.21.0",
-    "nativescript-vue-template-compiler": "~2.2.0",
-    "node-sass": "~4.11.0",
-    "vue-loader": "~15.4.0",
     "babel-traverse": "6.26.0",
     "babel-types": "6.26.0",
     "babylon": "6.18.0",
@@ -39,9 +35,13 @@
     "copy-webpack-plugin": "^4.5.2",
     "css-loader": "^1.0.0",
     "lazy": "1.0.11",
+    "nativescript-dev-webpack": "1.0.1",
+    "nativescript-vue-template-compiler": "2.3.0",
     "nativescript-worker-loader": "~0.9.0",
+    "node-sass": "^4.13.1",
     "sass-loader": "^7.1.0",
     "terser-webpack-plugin": "^1.1.0",
+    "vue-loader": "~15.4.0",
     "webpack": "^4.16.4",
     "webpack-bundle-analyzer": "~2.13.1",
     "webpack-cli": "^3.1.0"
