--- a/package.json
+++ b/package.json
@@ -12,16 +12,17 @@
   "license": "SEE LICENSE IN <your-license-filename>",
   "repository": "<fill-your-repository-here>",
   "dependencies": {
-    "nativescript-theme-core": "~1.0.4",
-    "nativescript-vue": "2.3.0",
-    "tns-core-modules": "6.0.1",
     "@vue/devtools": "^5.0.6",
     "axios": "^0.18.0",
     "he": "^1.2.0",
     "nativescript-ratings": "^1.0.1",
     "nativescript-socketio": "^3.2.1",
+    "nativescript-splashscreen": "^2.3.0",
+    "nativescript-theme-core": "~1.0.4",
     "nativescript-toasty": "^1.3.0",
+    "nativescript-vue": "2.3.0",
     "nativescript-vue-devtools": "^1.2.0",
+    "tns-core-modules": "6.0.1",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
