--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "nativescript": {
-    "id": "org.eedama.quizzForKids",
+    "id": "org.nativescript.quizzTemplate",
     "tns-android": {
       "version": "6.0.0"
     },
